--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -34,6 +34,15 @@ spec:
                         properties:
                           authenticationClass:
                             type: string
+                          secret:
+                            nullable: true
+                            oneOf:
+                              - required:
+                                  - oidc
+                            properties:
+                              oidc:
+                                type: string
+                            type: object
                         required:
                           - authenticationClass
                         type: object
