wip integration tests

--- a/tests/templates/kuttl/authentication/20-test-trino.yaml
+++ b/tests/templates/kuttl/authentication/20-test-trino.yaml
@@ -3,3 +3,4 @@ apiVersion: kuttl.dev/v1beta1
 kind: TestStep
 commands:
   - script: kubectl cp -n $NAMESPACE ./check-active-workers.py  test-trino-0:/tmp
+  - script: kubectl cp -n $NAMESPACE ./check-oauth-login.py  test-trino-0:/tmp
