--- a/tests/templates/kuttl/authentication/20-assert.yaml
+++ b/tests/templates/kuttl/authentication/20-assert.yaml
@@ -9,3 +9,5 @@ commands:
   # ldap
   - script: kubectl exec -n $NAMESPACE test-trino-0 -- python /tmp/check-active-workers.py -u integrationtest -p integrationtest -n $NAMESPACE -w 1
   - script: kubectl exec -n $NAMESPACE test-trino-0 -- python /tmp/check-active-workers.py -u integrationtest-other -p integrationtest-other -n $NAMESPACE -w 1
+  # oidc/oauth2
+  - script: kubectl exec -n $NAMESPACE test-trino-0 -- python /tmp/check-oauth-login.py
