--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,5 @@
 [workspace]
-members = [
-    "rust/crd", "rust/operator-binary"
-]
+members = ["rust/crd", "rust/operator-binary"]
 
 [workspace.package]
 version = "0.0.0-dev"
@@ -13,7 +11,7 @@ repository = "https://github.com/stackabletech/trino-operator"
 [workspace.dependencies]
 anyhow = "1.0"
 async-trait = "0.1"
-built = { version =  "0.6", features = ["chrono", "git2"] }
+built = { version = "0.6", features = ["chrono", "git2"] }
 clap = "4.3"
 futures = { version = "0.3", features = ["compat"] }
 indoc = "2.0"
@@ -25,7 +23,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
 snafu = "0.7"
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.55.0" }
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.56.0" }
+product-config = { git = "https://github.com/stackabletech/product-config.git", tag = "0.6.0" }
 strum = { version = "0.25", features = ["derive"] }
 tokio = { version = "1.29", features = ["full"] }
 tracing = "0.1"
