--- a/rust/operator-binary/Cargo.toml
+++ b/rust/operator-binary/Cargo.toml
@@ -22,6 +22,7 @@ pin-project.workspace = true
 semver.workspace = true
 snafu.workspace = true
 stackable-operator.workspace = true
+product-config.workspace = true
 strum.workspace = true
 tokio.workspace = true
 tracing.workspace = true
