refactor!: Move gracefulShutdownTimeout to roleGroup config (#486)
* refactor!: Move gracefulShutdownTimeout to roleGroup config

* fix typo

* update tests

* add assertion

* linter

* typo

* bump to operator-rs 0.55.0

* minor docs

* unify docs

* typo

* fix: Vector and password sidecar graceful shutdown

* fix: Re-enable graceful shutdown in tests

* docs

* Apply suggestions from code review

Co-authored-by: Techassi <git@techassi.dev>

* fix docs

* newlines

* Update docs/modules/trino/pages/usage-guide/operations/graceful-shutdown.adoc

Co-authored-by: Techassi <git@techassi.dev>

* improve docs

* docs

* docs

* newline

* Update docs/modules/trino/pages/usage-guide/operations/graceful-shutdown.adoc

Co-authored-by: Techassi <git@techassi.dev>

* doc review

---------

Co-authored-by: Techassi <git@techassi.dev>

--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -85,10 +85,6 @@ spec:
                           description: matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels map is equivalent to an element of matchExpressions, whose key field is "key", the operator is "In", and the values array contains only "value". The requirements are ANDed.
                           type: object
                       type: object
-                    gracefulShutdownTimeout:
-                      default: 1h
-                      description: Time period the trino workers have to gracefully shut down, e.g. `1h`, `30m` or `2d`. Consult the trino-operator documentation for details.
-                      type: string
                     listenerClass:
                       default: cluster-internal
                       description: |-
@@ -628,6 +624,10 @@ spec:
                                   type: array
                               type: object
                           type: object
+                        gracefulShutdownTimeout:
+                          description: Time period Pods have to gracefully shut down, e.g. `30m`, `1h` or `2d`. Consult the operator documentation for details.
+                          nullable: true
+                          type: string
                         logging:
                           default:
                             enableVectorAgent: null
@@ -4118,6 +4118,10 @@ spec:
                                         type: array
                                     type: object
                                 type: object
+                              gracefulShutdownTimeout:
+                                description: Time period Pods have to gracefully shut down, e.g. `30m`, `1h` or `2d`. Consult the operator documentation for details.
+                                nullable: true
+                                type: string
                               logging:
                                 default:
                                   enableVectorAgent: null
@@ -7668,6 +7672,10 @@ spec:
                                   type: array
                               type: object
                           type: object
+                        gracefulShutdownTimeout:
+                          description: Time period Pods have to gracefully shut down, e.g. `30m`, `1h` or `2d`. Consult the operator documentation for details.
+                          nullable: true
+                          type: string
                         logging:
                           default:
                             enableVectorAgent: null
@@ -11158,6 +11166,10 @@ spec:
                                         type: array
                                     type: object
                                 type: object
+                              gracefulShutdownTimeout:
+                                description: Time period Pods have to gracefully shut down, e.g. `30m`, `1h` or `2d`. Consult the operator documentation for details.
+                                nullable: true
+                                type: string
                               logging:
                                 default:
                                   enableVectorAgent: null
