--- a/tests/templates/kuttl/logging/03-install-trino-test-runner.yaml
+++ b/tests/templates/kuttl/logging/03-install-trino-test-runner.yaml
@@ -15,6 +15,7 @@ spec:
       labels:
         app: trino-test-runner
     spec:
+      serviceAccount: integration-tests-sa
       containers:
         - name: trino-test-runner
           image: docker.stackable.tech/stackable/testing-tools:0.2.0-stackable0.0.0-dev
