--- a/tests/templates/kuttl/authentication/03-install-test-trino.yaml
+++ b/tests/templates/kuttl/authentication/03-install-test-trino.yaml
@@ -15,6 +15,7 @@ spec:
       labels:
         app: test-trino
     spec:
+      serviceAccount: integration-tests-sa
       containers:
         - name: test-trino
           image: docker.stackable.tech/stackable/testing-tools:0.2.0-stackable0.0.0-dev
