--- a/docs/templating_vars.yaml
+++ b/docs/templating_vars.yaml
@@ -1,9 +1,9 @@
 ---
 helm:
-  repo_name: stackable-dev
-  repo_url: https://repo.stackable.tech/repository/helm-dev/
+  repo_name: stackable-stable
+  repo_url: https://repo.stackable.tech/repository/helm-stable/
 versions:
-  commons: 0.0.0-dev
-  secret: 0.0.0-dev
-  listener: 0.0.0-dev
-  trino: 0.0.0-dev
+  commons: 23.11.0
+  secret: 23.11.0
+  listener: 23.11.0
+  trino: 23.11.0
