--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -39,7 +39,7 @@ spec:
                             description: |-
                               This field contains authentication provider specific configuration. It is flattened into the final CRD.
 
-                              Use [`oidc_or_error`] to get the value or report an error to the user.
+                              Use [`ClientAuthenticationDetails::oidc_or_error`] to get the value or report an error to the user.
                             nullable: true
                             properties:
                               clientCredentialsSecret:
@@ -47,10 +47,7 @@ spec:
                                 type: string
                               extraScopes:
                                 default: []
-                                description: |-
-                                  An optional list of extra scopes which get merged with the scopes defined in the [`AuthenticationClass`][authclass].
-
-                                  [authclass]: crate::commons::authentication::AuthenticationClass
+                                description: An optional list of extra scopes which get merged with the scopes defined in the [`AuthenticationClass`].
                                 items:
                                   type: string
                                 type: array
