--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -14406,19 +14406,19 @@ spec:
                           nullable: true
                           properties:
                             sheetsDataExpireAfterWrite:
-                              description: How long to cache spreadsheet data or metadata, defaults to `5m`
+                              description: How long to cache spreadsheet data or metadata, defaults to `5m`.
                               nullable: true
                               type: string
                             sheetsDataMaxCacheSize:
-                              description: Maximum number of spreadsheets to cache, defaults to `1000`
+                              description: Maximum number of spreadsheets to cache, defaults to 1000.
                               nullable: true
                               type: string
                           type: object
                         credentialsSecret:
-                          description: Name of the secret containing the Google API JSON key file. The key used from the Secret is `credentials`
+                          description: The Secret containing the Google API JSON key file. The key used from the Secret is `credentials`.
                           type: string
                         metadataSheetId:
-                          description: Sheet ID of the spreadsheet, that contains the table mapping
+                          description: Sheet ID of the spreadsheet, that contains the table mapping.
                           type: string
                       required:
                         - credentialsSecret
@@ -14432,7 +14432,7 @@ spec:
                           nullable: true
                           properties:
                             configMap:
-                              description: Name of the discovery-configmap providing information about the HDFS cluster
+                              description: Name of the [discovery ConfigMap](https://docs.stackable.tech/home/nightly/concepts/service_discovery) providing information about the HDFS cluster.
                               type: string
                           required:
                             - configMap
@@ -14441,13 +14441,13 @@ spec:
                           description: Mandatory connection to a Hive Metastore, which will be used as a storage for metadata.
                           properties:
                             configMap:
-                              description: Name of the discovery-configmap providing information about the Hive metastore
+                              description: Name of the [discovery ConfigMap](https://docs.stackable.tech/home/nightly/concepts/service_discovery) providing information about the Hive metastore.
                               type: string
                           required:
                             - configMap
                           type: object
                         s3:
-                          description: Connection to an S3 store. Please make sure that the underlying Hive metastore also has access to the S3 store.
+                          description: Connection to an S3 store. Please make sure that the underlying Hive metastore also has access to the S3 store. Learn more about S3 configuration in the [S3 concept docs](https://docs.stackable.tech/home/nightly/concepts/s3).
                           nullable: true
                           oneOf:
                             - required:
@@ -14557,7 +14557,7 @@ spec:
                           nullable: true
                           properties:
                             configMap:
-                              description: Name of the discovery-configmap providing information about the HDFS cluster
+                              description: Name of the [discovery ConfigMap](https://docs.stackable.tech/home/nightly/concepts/service_discovery) providing information about the HDFS cluster.
                               type: string
                           required:
                             - configMap
@@ -14566,13 +14566,13 @@ spec:
                           description: Mandatory connection to a Hive Metastore, which will be used as a storage for metadata.
                           properties:
                             configMap:
-                              description: Name of the discovery-configmap providing information about the Hive metastore
+                              description: Name of the [discovery ConfigMap](https://docs.stackable.tech/home/nightly/concepts/service_discovery) providing information about the Hive metastore.
                               type: string
                           required:
                             - configMap
                           type: object
                         s3:
-                          description: Connection to an S3 store. Please make sure that the underlying Hive metastore also has access to the S3 store.
+                          description: Connection to an S3 store. Please make sure that the underlying Hive metastore also has access to the S3 store. Learn more about S3 configuration in the [S3 concept docs](https://docs.stackable.tech/home/nightly/concepts/s3).
                           nullable: true
                           oneOf:
                             - required:
