--- a/rust/operator-binary/Cargo.toml
+++ b/rust/operator-binary/Cargo.toml
@@ -26,6 +26,7 @@ product-config.workspace = true
 strum.workspace = true
 tokio.workspace = true
 tracing.workspace = true
+serde_yaml.workspace = true
 
 [dev-dependencies]
 rstest.workspace = true
