--- a/deploy/helm/trino-operator/templates/roles.yaml
+++ b/deploy/helm/trino-operator/templates/roles.yaml
@@ -3,6 +3,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: {{ include "operator.fullname" . }}-clusterrole
+  labels:
+  {{- include "operator.labels" . | nindent 4 }}
 rules:
   # For OPA dependents. Note that OPA it's self is listed here because it's own resource name
   # doesn't follow the *clusters convention
@@ -160,6 +162,8 @@ apiVersion: security.openshift.io/v1
 kind: SecurityContextConstraints
 metadata:
   name: trino-scc
+  labels:
+  {{- include "operator.labels" . | nindent 4 }}
   annotations:
     kubernetes.io/description: |-
       This resource is derived from hostmount-anyuid. It provides all the features of the
@@ -203,6 +207,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: {{ include "operator.name" . }}-clusterrole
+  labels:
+  {{- include "operator.labels" . | nindent 4 }}
 rules:
   - apiGroups:
       - ""
