--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -14266,6 +14266,8 @@ spec:
                     - required:
                         - blackHole
                     - required:
+                        - deltaLake
+                    - required:
                         - googleSheet
                     - required:
                         - generic
@@ -14280,6 +14282,134 @@ spec:
                   properties:
                     blackHole:
                       description: A [Black Hole](https://docs.stackable.tech/home/nightly/trino/usage-guide/catalogs/black-hole) connector.
+                      type: object
+                    deltaLake:
+                      description: An [Delta Lake](https://docs.stackable.tech/home/nightly/trino/usage-guide/catalogs/delta-lake) connector.
+                      properties:
+                        hdfs:
+                          description: Connection to an HDFS cluster. Please make sure that the underlying Hive metastore also has access to the HDFS.
+                          nullable: true
+                          properties:
+                            configMap:
+                              description: Name of the [discovery ConfigMap](https://docs.stackable.tech/home/nightly/concepts/service_discovery) providing information about the HDFS cluster.
+                              type: string
+                          required:
+                            - configMap
+                          type: object
+                        metastore:
+                          description: Mandatory connection to a Hive Metastore, which will be used as a storage for metadata.
+                          properties:
+                            configMap:
+                              description: Name of the [discovery ConfigMap](https://docs.stackable.tech/home/nightly/concepts/service_discovery) providing information about the Hive metastore.
+                              type: string
+                          required:
+                            - configMap
+                          type: object
+                        s3:
+                          description: Connection to an S3 store. Please make sure that the underlying Hive metastore also has access to the S3 store. Learn more about S3 configuration in the [S3 concept docs](https://docs.stackable.tech/home/nightly/concepts/s3).
+                          nullable: true
+                          oneOf:
+                            - required:
+                                - inline
+                            - required:
+                                - reference
+                          properties:
+                            inline:
+                              description: Inline definition of an S3 connection.
+                              properties:
+                                accessStyle:
+                                  description: Which access style to use. Defaults to virtual hosted-style as most of the data products out there. Have a look at the [AWS documentation](https://docs.aws.amazon.com/AmazonS3/latest/userguide/VirtualHosting.html).
+                                  enum:
+                                    - Path
+                                    - VirtualHosted
+                                  nullable: true
+                                  type: string
+                                credentials:
+                                  description: If the S3 uses authentication you have to specify you S3 credentials. In the most cases a [SecretClass](https://docs.stackable.tech/home/nightly/secret-operator/secretclass) providing `accessKey` and `secretKey` is sufficient.
+                                  nullable: true
+                                  properties:
+                                    scope:
+                                      description: '[Scope](https://docs.stackable.tech/home/nightly/secret-operator/scope) of the [SecretClass](https://docs.stackable.tech/home/nightly/secret-operator/secretclass).'
+                                      nullable: true
+                                      properties:
+                                        node:
+                                          default: false
+                                          description: The node scope is resolved to the name of the Kubernetes Node object that the Pod is running on. This will typically be the DNS name of the node.
+                                          type: boolean
+                                        pod:
+                                          default: false
+                                          description: The pod scope is resolved to the name of the Kubernetes Pod. This allows the secret to differentiate between StatefulSet replicas.
+                                          type: boolean
+                                        services:
+                                          default: []
+                                          description: The service scope allows Pod objects to specify custom scopes. This should typically correspond to Service objects that the Pod participates in.
+                                          items:
+                                            type: string
+                                          type: array
+                                      type: object
+                                    secretClass:
+                                      description: '[SecretClass](https://docs.stackable.tech/home/nightly/secret-operator/secretclass) containing the LDAP bind credentials.'
+                                      type: string
+                                  required:
+                                    - secretClass
+                                  type: object
+                                host:
+                                  description: 'Hostname of the S3 server without any protocol or port. For example: `west1.my-cloud.com`.'
+                                  nullable: true
+                                  type: string
+                                port:
+                                  description: Port the S3 server listens on. If not specified the product will determine the port to use.
+                                  format: uint16
+                                  minimum: 0.0
+                                  nullable: true
+                                  type: integer
+                                tls:
+                                  description: If you want to use TLS when talking to S3 you can enable TLS encrypted communication with this setting.
+                                  nullable: true
+                                  properties:
+                                    verification:
+                                      description: The verification method used to verify the certificates of the server and/or the client.
+                                      oneOf:
+                                        - required:
+                                            - none
+                                        - required:
+                                            - server
+                                      properties:
+                                        none:
+                                          description: Use TLS but don't verify certificates.
+                                          type: object
+                                        server:
+                                          description: Use TLS and a CA certificate to verify the server.
+                                          properties:
+                                            caCert:
+                                              description: CA cert to verify the server.
+                                              oneOf:
+                                                - required:
+                                                    - webPki
+                                                - required:
+                                                    - secretClass
+                                              properties:
+                                                secretClass:
+                                                  description: Name of the [SecretClass](https://docs.stackable.tech/home/nightly/secret-operator/secretclass) which will provide the CA certificate. Note that a SecretClass does not need to have a key but can also work with just a CA certificate, so if you got provided with a CA cert but don't have access to the key you can still use this method.
+                                                  type: string
+                                                webPki:
+                                                  description: Use TLS and the CA certificates trusted by the common web browsers to verify the server. This can be useful when you e.g. use public AWS S3 or other public available services.
+                                                  type: object
+                                              type: object
+                                          required:
+                                            - caCert
+                                          type: object
+                                      type: object
+                                  required:
+                                    - verification
+                                  type: object
+                              type: object
+                            reference:
+                              description: A reference to an S3Connection resource.
+                              type: string
+                          type: object
+                      required:
+                        - metastore
                       type: object
                     generic:
                       description: A [generic](https://docs.stackable.tech/home/nightly/trino/usage-guide/catalogs/generic) connector.
