use rego v1 in examples, swithc extended to batch

--- a/docs/modules/trino/examples/usage-guide/opa-bundle-trino-cm-414.yaml
+++ b/docs/modules/trino/examples/usage-guide/opa-bundle-trino-cm-414.yaml
@@ -13,10 +13,10 @@ data:
 
     default allow = false
 
-    allow {
+    allow if {
       is_admin
     }
 
-    is_admin() {
+    is_admin() if {
       input.context.identity.user == "admin"
     }
