--- a/tests/templates/kuttl/authentication/05-install-test-trino.yaml
+++ b/tests/templates/kuttl/authentication/05-install-test-trino.yaml
@@ -16,7 +16,22 @@ spec:
         app: test-trino
     spec:
       serviceAccount: integration-tests-sa
+      securityContext:
+        fsGroup: 1000
       containers:
         - name: test-trino
           image: docker.stackable.tech/stackable/testing-tools:0.2.0-stackable0.0.0-dev
           command: ["sleep", "infinity"]
+          volumeMounts:
+            - name: tls
+              mountPath: /stackable/tls
+          env:
+            - name: REQUESTS_CA_BUNDLE
+              value: /stackable/tls/ca.crt
+      volumes:
+        - name: tls
+          csi:
+            driver: secrets.stackable.tech
+            volumeAttributes:
+              secrets.stackable.tech/class: tls
+              secrets.stackable.tech/scope: pod
