--- a/tests/templates/kuttl/opa-authorization/40-copy-scripts.yaml
+++ b/tests/templates/kuttl/opa-authorization/40-copy-scripts.yaml
@@ -3,4 +3,4 @@ apiVersion: kuttl.dev/v1beta1
 kind: TestAssert
 timeout: 300
 commands:
-  - script: kubectl exec -n $NAMESPACE trino-test-opa-0 -- python /tmp/check-opa.py -n $NAMESPACE
+  - script: kubectl cp -n $NAMESPACE ./check-opa.py trino-test-opa-0:/tmp || true
