add sa for openshift

--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -92,7 +92,8 @@ tests:
   - name: opa-authorization
     dimensions:
       - trino-latest
-      - opa      
+      - opa
+      - openshift      
 suites:
   - name: nightly
     # Run with the latest product versions and tls true and false to cover different tls code paths.
